--- a/imagens.htm
+++ b/imagens.htm
@@ -28,136 +28,136 @@
     PNG</font></a></b></td>
   </tr>
 </table>
-<p><a href="http://www.livropublicado.com.br/url/image1.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/1.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image2.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/2.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image3.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/3.png" width="120" height="100"></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image1.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/1.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image2.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/2.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image3.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/3.png" width="120" height="100"></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image4.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/4.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image4.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/4.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image5.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/5.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image5.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/5.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image6.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/6.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image6.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/6.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image7.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/7.png" width="120" height="101"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image7.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/7.png" width="120" height="101"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image8.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/8.png" width="120" height="101"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image8.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/8.png" width="120" height="101"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image9.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/9.png" width="120" height="101"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image9.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/9.png" width="120" height="101"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image10.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/10.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image10.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/10.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image11.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/11.png" width="121" height="101"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image11.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/11.png" width="121" height="101"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image13.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/13.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image13.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/13.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image14.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/14.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image14.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/14.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image15.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/15.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image15.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/15.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image16.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/16.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image16.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/16.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image17.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/17.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image17.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/17.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image18.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/18.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image18.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/18.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image26.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/26.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image26.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/26.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image47.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/47.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image47.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/47.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image48.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/48.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image48.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/48.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image49.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/49.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image49.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/49.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image50.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/50.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image50.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/50.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image51.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/51.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image51.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/51.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image52.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/52.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image52.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/52.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image56.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/56.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image56.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/56.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image57.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/57.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image57.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/57.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image63.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/63.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image63.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/63.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image64.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/64.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image64.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/64.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image66.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/66.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image66.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/66.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image67.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/67.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image67.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/67.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image68.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/68.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image68.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/68.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image69.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/69.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image69.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/69.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image70.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/70.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image70.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/70.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image78.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/78.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image78.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/78.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image80.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/80.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image80.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/80.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image85.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/85.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image85.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/85.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image86.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/86.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image86.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/86.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image91.htm">
-<img src="http://www.livropublicado.com.br/mini_images/91.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image92.htm">
-<img src="http://www.livropublicado.com.br/mini_images/92.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image93.htm">
-<img src="http://www.livropublicado.com.br/mini_images/93.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image94.htm">
-<img src="http://www.livropublicado.com.br/mini_images/94.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image95.htm">
-<img src="http://www.livropublicado.com.br/mini_images/95.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image96.htm">
-<img src="http://www.livropublicado.com.br/mini_images/96.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image97.htm">
-<img src="http://www.livropublicado.com.br/mini_images/97.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image98.htm">
-<img src="http://www.livropublicado.com.br/mini_images/98.png" width="120" height="100"></a></p>
-<p><a href="http://www.livropublicado.com.br/url/image99.htm">
-<img src="http://www.livropublicado.com.br/mini_images/99.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image91.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/91.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image92.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/92.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image93.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/93.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image94.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/94.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image95.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/95.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image96.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/96.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image97.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/97.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image98.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/98.png" width="120" height="100"></a></p>
+<p><a href="https://editorafacil.github.io/SeuLivro/url/image99.htm">
+<img src="https://editorafacil.github.io/SeuLivro/mini_images/99.png" width="120" height="100"></a></p>
 <p>
-<a href="http://www.livropublicado.com.br/url/image100.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/100.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image100.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/100.png" width="120" height="100"></a></p>
 </body>
 
 </html>
