--- a/editcap/capa18.htm
+++ b/editcap/capa18.htm
@@ -10,7 +10,7 @@
  
 <frameset rows="0,*" border="0">
 <frame name="header" scrolling="no" noresize target="main">
-<frame name="main" src="https://pixlr.com/editor/?s=c&image=https://goo.gl/uxn74i&title=Rascunho%20da%20Capa%20do%20meu%20livro&exit=http://www.livropublicado.com.br/">
+<frame name="main" src="https://pixlr.com/editor/?s=c&image=https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Fundo%20da%20capa/cor18.png&title=Rascunho%20da%20Capa%20do%20meu%20livro&exit=https://editorafacil.github.io/SeuLivro/">
 <noframes>
 <body>
  
