--- a/molduras.htm
+++ b/molduras.htm
@@ -31,123 +31,123 @@
   </tr>
 </table>
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image141.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image141.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/141.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image142.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image142.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/142.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image143.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image143.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/143.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image144.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image144.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/144.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image145.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image145.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/145.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image146.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image146.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/146.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image147.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image147.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/147.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image148.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image148.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/148.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image149.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image149.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/149.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image150.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image150.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/150.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image151.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image151.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/151.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image152.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image152.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/152.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image153.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image153.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/153.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image154.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image154.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/154.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image155.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image155.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/155.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image156.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image156.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/156.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image157.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image157.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/157.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image158.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image158.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/158.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image159.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image159.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/159.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image160.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image160.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/160.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image161.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image161.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/161.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image162.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image162.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/162.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image163.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image163.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/163.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image164.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image164.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/164.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image165.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image165.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/165.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image166.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image166.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/166.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image167.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image167.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/167.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image168.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image168.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/168.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image169.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image169.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/169.png" width="120" height="170"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br//url/image170.htm">
+<a href="https://editorafacil.github.io/SeuLivro/url/image170.htm">
 <img src="http://www.livropublicado.com.br/mini_molduras/170.png" width="120" height="170"></a></p>
 
 <p align="center">
