--- a/imagenspng.htm
+++ b/imagenspng.htm
@@ -39,204 +39,204 @@
 </table>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image12.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/12.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image12.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/12.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image19.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/19.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image19.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/19.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image20.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/20.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image20.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/20.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image21.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/21.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image21.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/21.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image22.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/22.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image22.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/22.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image23.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/23.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image23.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/23.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image24.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/24.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image24.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/24.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image25.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/25.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image25.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/25.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image28.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/28.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image28.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/28.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image32.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/32.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image32.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/32.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image34.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/34.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image34.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/34.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image35.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/35.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image35.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/35.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image36.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/36.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image36.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/36.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image37.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/37.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image37.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/37.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image39.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/39.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image39.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/39.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image40.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/40.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image40.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/40.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image44.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/44.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image44.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/44.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image45.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/45.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image45.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/45.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image46.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/46.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image46.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/46.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image53.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/53.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image53.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/53.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image54.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/54.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image54.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/54.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image55.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/55.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image55.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/55.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image58.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/58.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image58.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/58.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image59.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/59.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image59.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/59.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image60.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/60.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image60.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/60.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image62.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/62.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image62.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/62.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image65.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/65.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image65.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/65.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image71.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/71.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image71.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/71.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image72.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/72.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image72.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/72.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image73.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/73.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image73.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/73.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image74.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/74.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image74.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/74.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image75.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/75.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image75.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/75.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image77.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/77.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image77.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/77.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image79.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/79.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image79.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/79.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image81.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/81.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image81.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/81.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image82.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/82.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image82.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/82.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image83.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/83.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image83.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/83.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image84.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/84.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image84.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/84.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image87.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/87.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image87.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/87.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image88.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/88.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image88.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/88.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image89.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/89.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image89.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/89.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image101.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/101.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image101.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/101.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image102.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/102.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image102.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/102.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image103.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/103.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image103.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/103.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image104.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/104.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image104.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/104.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image105.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/105.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image105.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/105.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image106.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/106.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image106.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/106.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image107.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/107.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image107.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/107.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image108.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/108.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image108.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/108.png" width="120" height="100"></a></p>
 
 <p align="center">
-<a href="http://www.livropublicado.com.br/url/image109.htm">
-<img src="http://www.livropublicado.com.br/Mine%20imagens/109.png" width="120" height="100"></a></p>
+<a href="https://editorafacil.github.io/SeuLivro/url/image109.htm">
+<img src="https://editorafacil.github.io/SeuLivro/Mine%20imagens/109.png" width="120" height="100"></a></p>
 
 <p align="center">
 &nbsp;</p>
